# census_project_submission

./: .gitignore  LICENSE  MLproject  README.md  conda.yml  hydra_config.yaml  main.py  model.dvc  pyproject.toml  query_example.py  requirements.txt  run.py  test_main.py
.dvc/: config
.github/workflows/: format_check.yml
data/processed_data/: cleaned_data.csv.dvc  data_clean_log.txt
model/: dct_model.pkl  model_card.md  model_score.txt  slice_output.txt
notebook/: eda_.ipynb
src/data_clean/: MLproject  conda.yml  run.py
src/training/: MLproject  conda.yml  run.py  test_model.py
src/training/ml/: data.py  model.py
