[tool.poetry]
name = "census_project_submission"
version = "0.1.0"
description = ""
authors = ["samakshg97"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
dvc = "^3.36.1"
mlflow = "^2.9.2"
fastapi = "^0.106.0"
uvicorn = "^0.25.0"
scipy = "^1.11.4"
virtualenv = "^20.25.0"
pytest = "^7.4.3"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^6.1.0"
pyright = "^1.1.343"
yapf = "^0.40.2"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
